# bertopic_profiap

./: 00_dados_sucupira.py  01_expr_bertopic_profiap.py  02_train_model_with_gpt_representation.py  README.md  pyproject.toml  runs_catalog_filtered.csv
data/: custom_prompt_bertopic_openai.txt  custom_prompt_bertopic_openai_description.txt
data/octis/: corpus.tsv  vocabulary.txt
models/expr_bertopic_profiap/: runs_catalog_all.csv
notebooks/: 01_EDA_metricas.ipynb  02_EDA_visualizacoes.ipynb  03_EDA_visualizacoes_with_llm_labels.ipynb  dashboard.qmd
scripts/: download_spacy_model.sh
